---------------------------------------------------------------------------------------------------
Version: 0.0.58
Date: 28/12/2019
  Bugfixes:
    - Fixed a crash that occurred when the Mobile Factory is removed while the Ore Cleaner or the Fluid Extractor is working
---------------------------------------------------------------------------------------------------
Version: 0.0.57
Date: 26/12/2019
  Bugfixes:
    - Fixed a crash when the Ore Cleaner is placed
---------------------------------------------------------------------------------------------------
Version: 0.0.56
Date: 25/12/2019
  Features:
    - Added compatibility with Bob's Vehicle Equipment
    - Added compatibility with Schall Gun Pod
  Bugfixes:
    - The Data Center and the Internal Inventory Data Center now correctly send Signals
---------------------------------------------------------------------------------------------------
Version: 0.0.55
Date: 24/12/2019
  Changes:
    - The Internal Inventory Data Center can now transfer Items from Ore Silos inside the Control Center
    - The content of the Control Center Ore Silos is added to the Internal Inventory Data Center Signals
    - Removed Ore Silo Pad 1/2/3/4/5, replaced by Iron Chest when placed on the Map
  Bugfixes:
    - Fixed a game crash when an Item from a removed Mod still exist inside the Internal Inventory
  Scripting:
    - Rework of all Migrations game.print()
---------------------------------------------------------------------------------------------------
Version: 0.0.54
Date: 21/12/2019
  Changes:
    - The Fluid Extractor can now be placed multiple time
    - The base Fluid Extractor extraction rate is now 30 u/s (Instead of 100 u/s) multiplied per the Quatron Purity
  Gui:
    - Removed the Structures Tab from the Info GUI
    - Informations about the Ore Cleaner are now visible throught the Tooltip Gui
    - Informations about the Fluid Extractors are now visible throught the Tooltip Gui
  Scripting: