@@ -68,6 +68,7 @@ function MS:update()
 	
 	-- Check if the Matter Serializer is linked with a live Data Network --
 	local active = false
+	self.dataNetwork = nil
 	for k, obj in pairs(global.dataNetworkTable) do
 		if obj:isLinked(self) == true then
 			self.dataNetwork = obj
@@ -79,6 +80,11 @@ function MS:update()
 		end
 	end
 	self:setActive(active)
+	
+	-- Update the Inventory --
+	if self.active == true then
+		self:updateInv()
+	end
 end
 
 function MS:updateInv()
